# DecorationAssistant

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SUPPORT.md  about.md  mod.json
data/: corpus_index.json  default_palettes.json  layer_presets.json  rules_minimal.json  schema_version.json
scripts/: ensure_dotnet_runtime.ps1
src/: main.cpp
src/core/: ApplyEngine.cpp  ApplyEngine.hpp  AudioAnalyzer.cpp  AudioAnalyzer.hpp  DifficultyEstimator.cpp  DifficultyEstimator.hpp  EditorScan.cpp  EditorScan.hpp  LayerAssigner.cpp  LayerAssigner.hpp  LevelCorpus.cpp  LevelCorpus.hpp  PaletteEngine.cpp  PaletteEngine.hpp  Persist.cpp  Persist.hpp  RegionSelector.cpp  RegionSelector.hpp  RuleEngine.cpp  RuleEngine.hpp  SimilarityEngine.cpp  SimilarityEngine.hpp  StyleExtractor.cpp  StyleExtractor.hpp  Suggestion.hpp  Telemetry.cpp  Telemetry.hpp  UndoCommands.cpp  UndoManager.cpp  UndoManager.hpp
src/integration/: EditorAdapter.cpp  EditorAdapter.hpp  Events.hpp  Hooks.cpp  Hooks.hpp  ImportBridge.cpp  ImportBridge.hpp
src/ui/: AutoLayerPanel.cpp  AutoLayerPanel.hpp  CorpusPanel.cpp  CorpusPanel.hpp  DecoPanelLayer.cpp  DecoPanelLayer.hpp  OverlayHud.cpp  OverlayHud.hpp  UndoBar.cpp  UndoBar.hpp
src/utils/: Color.cpp  Color.hpp  Geometry.cpp  Geometry.hpp  Json.cpp  Json.hpp  Timing.cpp  Timing.hpp
tests/: test_autolayer.md  test_corpus.md  test_rules.md
